--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 h1{
-  color: Pink
+  color: Purple
 }
 
 body{
-    background-image:url("/home/hc031/Downloads/wallpaper image.jpeg");
+    background-image:url("/home/hc031/Downloads/index_files/images.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+h2{
+  color: white
+}
+p{
+  color: turquoise
 }
