--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1{
 }
 
 body{
-    background-image:url("images.jpeg");
+    background-image:url("Images/images.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
